# Hotel-booking-syste

./: pyproject.toml
scripts/: script.sh
src/application/dtos/: booking_dto.py
src/application/interfaces/: payment_service.py  repository.py
src/application/use_cases/: create_booking.py
src/domain/entites/: booking.py  guest.py  payment.py  room.py
src/domain/services/: booking_service.py
src/domain/value_objects/: booking_reference.py  date_range.py  room_type.py
src/infrastructure/persistence/: database.py
src/infrastructure/persistence/models/: booking_model.py  guest_model.py  room_model.py
