[project]
name = "hotel-booking-system"
version = "1.0.0"
dependencies = [
    "fastapi==0.115.0",
    "sqlalchemy==2.0.35",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff==0.6.8",
    "pyre-check==0.9.22",
    "uvicorn==0.32.0",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=70"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "B", "Q"]
ignore = []

[tool.pyre]
exclude = ["tests/"]